# rusty_taskboard

./: .tasks.md  Cargo.toml  README.md
.todo/: config.yaml  tasks.csv
src/: app.rs  lib.rs  list.rs  main.rs  task.rs
src/app/: list.rs  settings.rs  topbar.rs
